# near-contract-example

./: README.md
.github/workflows/: build.yml
contracts/: .gitignore  Cargo.toml  build.sh  rust-toolchain.toml
contracts/contract-01/: Cargo.toml  build.rs
contracts/contract-01/src/: init.rs  lib.rs  main.rs  non_wasm.rs  version.rs
contracts/contract-01/tests/: test_counter.rs
contracts/contract-01/tests/utils/: mod.rs
