[package]
name = "contract-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "example-01-openapi"
path = "src/bin/openapi.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "=4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"
near-units = "0.1.0"

[dependencies.common]
git = "https://github.com/Seatlab-dev/Smart-Contracts-Common-Library.git"
rev = "783854c"
default-features = false
features = []

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"
near-contract-standards = "4.0.0-pre.8"
near-units = "0.1.0"

[dev-dependencies.common]
git = "https://github.com/Seatlab-dev/Smart-Contracts-Common-Library.git"
rev = "783854c"
features = ["sim"]

[build-dependencies]

[build-dependencies.common]
git = "https://github.com/Seatlab-dev/Smart-Contracts-Common-Library.git"
rev = "783854c"
default-features = false
features = []
